[project]
name = "pulseclaw"
version = "0.1.0"
description = "Self-hosted notification agent. Speed of knowledge acquisition is the durable edge."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "PulseClaw" }]

dependencies = [
    "ollama>=0.3.0",
    "openai>=1.40.0",
    "lancedb>=0.13.0",
    "pyarrow>=17.0.0",
    "hdbscan>=0.8.38",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "praw>=7.7.1",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10.4",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "plyer>=2.1.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
pulseclaw = "pulseclaw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pulseclaw"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
